# augment_camera

./: .gitignore  CMakeLists.txt  CameraAugment.cpp  CameraAugment.hpp  SimpleFaceDetector.hpp  VirtualCamera.cpp  VirtualCamera.hpp  main.cpp  widget.cpp  widget.h  widget.ui
tmp/: moc_widget.cpp
